refactor RoyalLoginView